fix: add dark/light theme toggle, localization switch (EN/HI/JP), and detail screen fallback banner

--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -4,11 +4,16 @@
     
     <string name="details">विवरण</string>
     <string name="back">वापस</string>
+    <string name="settings">सेटिंग्स</string>
     
     <string name="security_title">डिवाइस सुरक्षित नहीं है</string>
     <string name="security_message">यह डिवाइस रूटेड या एमुलेटर पर चल रहा है। सुरक्षा कारणों से, कुछ सुविधाएँ प्रतिबंधित हो सकती हैं। क्या आप जारी रखना चाहते हैं?</string>
     <string name="proceed">आगे बढ़ें</string>
     <string name="exit">बाहर निकलें</string>
+    
+    <string name="dark_theme">डार्क थीम</string>
+    <string name="theme_description">डार्क/लाइट थीम टॉगल करें</string>
+    <string name="language">भाषा</string>
     
     <string name="retry">पुनः प्रयास करें</string>
     
@@ -16,6 +21,7 @@
     <string name="no_synopsis">कोई सारांश उपलब्ध नहीं है।</string>
     <string name="studios">स्टूडियो</string>
     <string name="empty_list">कोई एनीमे नहीं मिला</string>
+    <string name="trailer_unavailable">ट्रेलर उपलब्ध नहीं है</string>
     
     <string name="error_no_internet">इंटरनेट कनेक्शन नहीं है। कृपया अपना नेटवर्क जांचें।</string>
     <string name="error_timeout">अनुरोध समय समाप्त। कृपया पुनः प्रयास करें।</string>
